# CSC4330

./: CMakeLists.txt  CMakePresets.json  CSC 4330 - Project System Description.docx  CSC 4330 Deliverable 1 - SRS.docx  README.md  image_to_text.dart  requirements.txt  vcpkg.json
include/: ExtractPDFText.h  FileParse.h  SuggestedEvent.h  genericEvent.h  linkCreator.h  timekeeper.h
src/: ExtractPDFText.cpp  GenericEvent.cpp  TextParse.cpp  date_parser.py  firstTest.cpp  iCalCreator.py  image_to_text.dart  linkCreator.cpp  timekeeper.cpp
